Update BaseE2ETestE2E.java